--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body{
     background-color: rgb(224, 224, 224);
 }
 
+.map{
+    
+}
 
 
 .hero{
@@ -33,13 +36,13 @@ body{
 }
 
 .main-content{
-    background-color: rgba(225, 225, 225, .9);   
+    background-color: rgba(255, 255, 255, .9);   
     border-radius: 20px;
+    margin-top:15px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    
 }
 
 
