--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,62 @@ body{
     background-color: rgb(224, 224, 224);
 }
 
-.map{
-    
-}
+
 
 
 .hero{
+    animation: fadeIn 1s;
     margin-bottom: 10px;
+    overflow: hidden;
+    position: relative;
 }
+
+.pupian{
+    z-index: 2;
+ 
+    position:absolute;
+    margin-top: -300px;
+    margin-left: 700px;
+
+    animation: fadeIn 3s;
+    -webkit-animation: fadeIn 5s;
+    -moz-animation: fadeIn 5s;
+    -o-animation: fadeIn 5s;
+    -ms-animation: fadeIn 5s;
+  }
+  
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-moz-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-webkit-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-o-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
+  @-ms-keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
+
+
 
 
 .pup{
-    border-radius: 20px;
+    animation: fadeIn 1s;
+    border-radius: 5px;
     width: 100%; 
     height: 400px; 
     object-fit: cover;
@@ -21,13 +65,17 @@ body{
 }
 
 .content{
+    animation: fadeIn 1s;
     padding-left: 10px;
     padding-right: 10px;
 }
 
 .explore{
+    animation: fadeIn 1s;
+    float:left;
+    width: 69%;
     background-color: rgba(255, 255, 255, .9);   
-    border-radius: 20px;
+    border-radius: 5px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
@@ -35,14 +83,43 @@ body{
     
 }
 
+
+
+.twitter{
+    animation: fadeIn 2s;
+    float: right;
+    width: 30%;
+    background-color: rgba(119, 44, 44, 0.9);   
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.hymn{
+    animation: fadeIn 2s;
+    float: right;
+    width: 30%;
+    background-color: rgba(119, 44, 44, 0.9);   
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom:10px
+}
+
 .main-content{
+    float: left;
     background-color: rgba(255, 255, 255, .9);   
-    border-radius: 20px;
+    border-radius: 5px;
     margin-top:15px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
+    width: 75%;
 }
 
 
@@ -53,3 +130,6 @@ h1{
 h5{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
+
+
+
