--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,22 @@ body{
     position: relative;
 }
 
+.scanme{
+    z-index: 2;
+    background-color: maroon;
+    border-radius: 20px;
+    position:absolute;
+    margin-top: 10px;
+    margin-left: 10px;
+
+    animation: fadeIn 3s;
+    -webkit-animation: fadeIn 5s;
+    -moz-animation: fadeIn 5s;
+    -o-animation: fadeIn 5s;
+    -ms-animation: fadeIn 5s;
+  }
+  
+
 .pupian{
     z-index: 2;
  
