--- a/styles.css
+++ b/styles.css
@@ -163,3 +163,12 @@ h5{
 h3{
     font-family: 'Heavitas', sans-serif;         
 }
+
+@media only screen and (max-width: 1280px) {
+  .twitter,.hymn{
+display: none;
+  }
+  .events,.explore{
+    width: 100%;
+  }
+}
